--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@coreui/coreui": "^3.2.2",
+        "@coreui/vue": "^3.1.2",
+        "admin-lte": "^3.0.5",
         "sweetalert2": "^9.17.1",
         "vform": "^1.0.1",
+        "vue-good-table": "^2.21.0",
+        "vue-picture-input": "^2.1.6",
         "vue-router": "^3.3.4"
     }
 }
