--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "@coreui/coreui": "^3.2.2",
         "@coreui/vue": "^3.1.2",
         "admin-lte": "^3.0.5",
+        "fuzzaldrin-plus": "^0.6.0",
         "sweetalert2": "^9.17.1",
         "vform": "^1.0.1",
         "vue-good-table": "^2.21.0",
+        "vue-moment": "^4.1.0",
         "vue-picture-input": "^2.1.6",
         "vue-router": "^3.3.4"
     }
